--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "mongoose": "^5.3.13",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "yargs": "^12.0.5"
   }
 }
