--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js  -a '1600 Pennsylvania Ave Washington D.C.'"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,9 @@
   "homepage": "https://github.com/anthonylapham/node-weather-app#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "mongoose": "^5.3.13",
+    "postcode-validator": "^1.2.0",
     "request": "^2.88.0",
     "yargs": "^12.0.5"
   }
