--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "mongoose": "^5.3.13",
     "postcode-validator": "^1.2.0",
     "request": "^2.88.0",
